# CityGuard

./: .env-sample  .gitignore  pyproject.toml
demo/: README.md  quick_start.py
demo/cloud/: CloudSolver.py
demo/constants/: memory_constants.py
demo/coordinators/: AgentCoordinator.py  MultiViewByCloudCoordinator.py  MultiViewByVehicleCoordinator.py
demo/demo_llm_io/: output_models.py  system_prompts.py
demo/demo_settings/: variables.py
demo/edge/: Memory.py
demo/global_settings/: memory.py
demo/globals/: executor.py  vehicles.py
demo/llm_io/: output_models.py  system_prompts.py
demo/observations/: ImageObservationHandler.py  ObservationHandler.py  TextObservationHandler.py
demo/test/: my_test.py
demo/vehicle/: AgentCard.py  Vehicle.py  VehicleExecutor.py
env_utils/: llm_args.py
guard/: monitor_info.json  quick_start.py
guard/agent/: executor.py  generator.py  planner.py  verifier.py
guard/cloud/: solver.py
guard/common/: model.py  prompt.py  tool.py
guard/experiment/: new_verify_test.py  score_comparison.py  solver.py  step_comparison.py  visual_new_verify.py  visualization.py
guard/meta/: camera_info.json  monitor_info.json  root_analyze_info.json
guard/server/: __init__.py  main.py  router.py  schemas.py  service.py
vc_guard/: vc_guard_start.py
vc_guard/cloud/: solver.py
vc_guard/common/: models.py  prompts.py
vc_guard/edge/: executor.py  vechicle.py
vc_guard/experiment/: comparison.py  evaluation.py  executor.py  tools.py  visualization.py
vc_guard/globals/: executor.py  grid.py  memory.py  vehicles.py
(+9 files in other folders)
