[project]
name = "cityguard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pathfinding>=1.0.19",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
]
